<resources>
    <string name="app_name">TestDataSQLLite</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="qty">Quantity</string>
    <string name="exp_date">Exp Date</string>
    <string name="harga">harga</string>
    <string name="submit_data">Submit data</string>
</resources>
